{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 8,
  "lineage": "9154d291-c5dc-f7fc-6150-47a4cc1304c8",
  "resources": [
    {
      "module": "module.sbn",
      "mode": "managed",
      "type": "aws_route",
      "name": "dgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e186ffe15ae3959d",
            "id": "r-rtb-0f16e8ffcc5672e431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f16e8ffcc5672e43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sbn.aws_route_table.rtb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sbn",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:route-table/rtb-0f16e8ffcc5672e43",
            "id": "rtb-0f16e8ffcc5672e43",
            "owner_id": "296066267476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "tags_all": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "vpc_id": "vpc-0dd963c8abc49e2f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sbn",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036da090b10e358be",
            "route_table_id": "rtb-0f16e8ffcc5672e43",
            "subnet_id": "subnet-0874120c9c93ace20"
          },
          "dependencies": [
            "module.sbn.aws_route_table.rtb",
            "module.sbn.aws_subnet.pub",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sbn",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:subnet/subnet-0874120c9c93ace20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0874120c9c93ace20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296066267476",
            "tags": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "tags_all": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "vpc_id": "vpc-0dd963c8abc49e2f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sbn",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:subnet/subnet-0b312aa1c4991a244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b312aa1c4991a244",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296066267476",
            "tags": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "tags_all": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "vpc_id": "vpc-0dd963c8abc49e2f7"
          },
          "dependencies": [
            "module.sbn.aws_subnet.pub",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:internet-gateway/igw-0e186ffe15ae3959d",
            "id": "igw-0e186ffe15ae3959d",
            "owner_id": "296066267476",
            "tags": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "tags_all": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "vpc_id": "vpc-0dd963c8abc49e2f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:vpc/vpc-0dd963c8abc49e2f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044601470b64785d7",
            "default_route_table_id": "rtb-02fabc6f2ba3696e7",
            "default_security_group_id": "sg-0a70f3b20be6c0b1b",
            "dhcp_options_id": "dopt-053c0fa1f2f5deb1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd963c8abc49e2f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02fabc6f2ba3696e7",
            "owner_id": "296066267476",
            "tags": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            },
            "tags_all": {
              "Cost": "mod-test",
              "Name": "tf-sample-module"
            }
          }
        }
      ]
    }
  ]
}